proyecto por culminar..... v 1

--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -155,8 +155,8 @@ common.saveNew=Guardar
 common.for=para
 common.delete.confirm.message=Esta seguro que quiere borrar los datos
 common.delete.confirm=Confirme para Borrar 
-common.login.fail=\u00a1Vaya! Algo sali\u00f3 mal al ingresar. Intentelo de nuevo? Vamos a tratar en averiguar lo que sali\u00f3 mal.
-common.login.bad.usernamepassword=\u00a1Vaya! No reconocemos ese nombre de usuario o contrase\u00f1a. \u00bfIntentelo de nuevo?
+common.login.fail=\u00a1Los datos ingresados no pertenecen a un usuario registrado. Int\u00e9ntelo de nuevo!
+common.login.bad.usernamepassword=\u00a1Nombre de usuario o contrase\u00f1a incorrectos. Intentelo de nuevo!
 common.new=Nuevo
 common.new1=Nueva
 common.actions=Acciones
@@ -226,6 +226,8 @@ comun.consulta= Consulta
 comun.categoria="Categoria"
 comun.fecha= Fecha
 comun.fecha.now= Fecha Actual
+comun.horaCita=Hora de cita m\u00e9dica
+comun.horaCita.lineaAyuda=Seleccione la hora que esta disponible para su cita m\u00e9dica
 comun.now= Actual
 comun.estado=Estado
 comun.genero=G\u00e9nero
@@ -287,7 +289,7 @@ module.stocklist.stock.unit=Unidad
 module.stocklist.stock.amount=Cantidad
 module.stocklist.delete.confirm=No se puede eliminar esta entidad, tiene datos relacionados
 module.setting=Configuraciones del Sistema
-module.setting.name=CONFIGURACION DE PROPIEDADES DEL SISTEMA
+module.setting.name=CONFIGURACI\u00d3N DE PROPIEDADES DEL SISTEMA
 module.setting.value=Valor
 module.stocklist.amount.inlinehelp=Cantidad de productos en stock. Ej: 45
 module.stocklist.unit.inlinehelp=Unidades de peso o medida. Ej: libras, quintales, kilos, metros
@@ -344,7 +346,7 @@ security.group=Grupos de usuario
 security.groups=ROLES DE USUARIOS
 security.group.name=Nombre de grupo
 security.group.type=Tipo de grupo
-security.assignedgroups=Grupos asignados
+security.assignedgroups=Roles asignados
 #Referencia
 
 validation.badUTF8Input=Este texto no anda bien
@@ -474,6 +476,7 @@ agenda.nombre = Agenda Odontol\u00f3gica
 turno.
 
 fichaOdontologica.admin=Administrar Fichas Odontol\u00f3gicas
+consultaOdontologica.admin=Administrar Consultas Odontol\u00f3gicas
 consultaOdontologica.Nombre=CONSULTA ODONTOL\u00d3GICA
 consultaOdontologica.nombre=Consulta Odontol\u00f3gica
 consultaOdontologica.observacionC=Observaci\u00f3n general de Consulta Odontol\u00f3gica
@@ -494,26 +497,26 @@ tratamiento.nombre=Tratamiento
 tratamiento.Nombre=TRATAMIENTO
 tratamiento.label=Tratamientos
 tratamiento.Label=TRATAMIENTOS
-tratamiento.carie=Carie
-tratamiento.obturacionProvicional=Obturacion Provicional
-tratamiento.obturacionDefinitiva=Obturacion Definitiva
+tratamiento.carie=Caries
+tratamiento.obturacionProvicional=Obturaci\u00f3n Provisional
+tratamiento.obturacionDefinitiva=Obturaci\u00f3n Definitiva
 tratamiento.sellanateNecesario=Sellante Necesario
 tratamiento.sellanateRealizado=Sellante Realizado
 tratamiento.corona=Corona
 tratamiento.endodonciaNecesaria=Endondoncia Necesaria
 tratamiento.endodonciaRealizada=Endondoncia Realizada
-tratamiento.extraccionIndicada=Extraccion Indicada
+tratamiento.extraccionIndicada=Extracci\u00f3n Indicada
 tratamiento.ausenciaPiezaDental=Ausencia Pieza Dental
 #Tratamientos a mas de un diente
-tratamiento.protesisFija=Protesis Fija
-tratamiento.protesisFija.inicio=Protesis Fija Inicio
-tratamiento.protesisFija.centro=Protesis Fija Centro
-tratamiento.protesisFija.fin=Protesis Fija Fin
-tratamiento.protesisParcialRemovible=Protesis Parcial Removible
-tratamiento.protesisParcialRemovible.i=Protesis PR inicio
-tratamiento.protesisParcialRemovible.c=Protesis PR centro
-tratamiento.protesisParcialRemovible.f=Protesis PR fin
-tratamiento.protesisTotal=Protesis Total
+tratamiento.protesisFija=Pr\u00f3tesis Fija
+tratamiento.protesisFija.inicio=Pr\u00f3tesis Fija Inicio
+tratamiento.protesisFija.centro=Pr\u00f3tesis Fija Centro
+tratamiento.protesisFija.fin=Pr\u00f3tesis Fija Fin
+tratamiento.protesisParcialRemovible=Pr\u00f3tesis Parcial Removible
+tratamiento.protesisParcialRemovible.i=Pr\u00f3tesis PR inicio
+tratamiento.protesisParcialRemovible.c=Pr\u00f3tesis PR centro
+tratamiento.protesisParcialRemovible.f=Pr\u00f3tesis PR fin
+tratamiento.protesisTotal=Pr\u00f3tesis Total
 #tratamiento.=
 #Fin Odontologia
 
