proyecto por culminar..... v 2

--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -150,7 +150,6 @@ common.property.overwrite=Sobre escribir attributo
 common.property.validator.help=Nombre de bean validador en el contexto seam
 common.property.converter.help=Nombre de bean conversor en el contexto seam
 common.property.overwrite.help=Nombre de attributo de clase BussinesEntity a sobreescribir al momento de guardar el objeto
-common.remove.gropoAsignado=Borrar Grupo Asingado
 common.saveNew=Guardar
 common.for=para
 common.delete.confirm.message=Esta seguro que quiere borrar los datos
@@ -344,6 +343,9 @@ usernameTakenMsg=Lo lamento, el nombre de usuario esta ocupado, pruebe uno nuevo
 survey.help=\u00bfC\u00f3mo contestar esta pregunta?
 security.group=Grupos de usuario
 security.groups=ROLES DE USUARIOS
+security.roles=Roles de Usuario
+security.rol=Rol
+security.RolAsignado=Borrar Rol Asingado
 security.group.name=Nombre de grupo
 security.group.type=Tipo de grupo
 security.assignedgroups=Roles asignados
