--- a/src/main/resources/edu/sgssalud/messages_es.properties
+++ b/src/main/resources/edu/sgssalud/messages_es.properties
@@ -197,7 +197,7 @@ common.cel=N\u00famero de Celular
 common.cel.inlinehelp=Indique su n\u00famero de celular 
 common.fecha.ingreso.medicamento=Fecha de Ingreso del Medicamento
 common.nombre.comercial=Nombre Comercial
-common.nombre.generico=Nombre Generico
+common.nombre.generico=Nombre Gen\u00e9rico
 common.fecha.nacimiento.lineaAyuda=Indique su fecha de Nacimiento
 common.assignto=Asignar
 common.group=Grupo
@@ -353,9 +353,14 @@ security.associateto.inlinehelp=Seleccione el rol al que quiere asignar, \u00e9s
 
 validation.badUTF8Input=Este texto no anda bien
 validation.badUTF8Input.detail=Evite usar car\u00e1teres extra\u00f1os en nombres y otra informaci\u00f3n corta
+validation.containsDigit=No se admiten n\u00fameros
+validation.containsString=No se admiten letras
+validation.date=Fecha ingresada incorrecta  
+validation.date.detail=Ingrese una fecha menor a la fecha actual
+validation.lengthDigit=EL n\u00famero ingresado es muy corto
 validation.requiredIdentificationNumber=N\u00famero de identificaci\u00f3n requerido
 validation.invalidIdentificationNumber=N\u00famero de identificaci\u00f3n inv\u00e1lido
-validation.lengthIdentificationNumber=N\u00famero de identificaci\u00f3n muy corto
+validation.lengthIdentificationNumber=Este campo s\u00f3lo admite n\u00fameros
 validation.wrongIdentificationNumber=Formato de n\u00famero de identificaci\u00f3n no v\u00e1lido
 validation.wrongIdentificationNumberLegalEntity=FORMATO INCORRECTO___
 validator.dni=El DNI ingresado pertenece a otro usuario
