--- a/src/main/resources/edu/sgssalud/messages_es.properties
+++ b/src/main/resources/edu/sgssalud/messages_es.properties
@@ -6,7 +6,7 @@
 # \u00e1 = \u00e1
 
 app.name=Software de Gestion de Servicios de Salud
-app.logo=Clinical software
+app.logo=Software Clinico
 
 #Account messages
 account=Cuenta
@@ -221,7 +221,7 @@ comun.area.lineaAyuda=A que \u00e1rea pertenece su carrera
 comun.carrera=Carrera
 comun.carrera.lineaAyuda=En que carrera estudia
 comun.consulta= Consulta
-comun.categoria="Categoria"
+comun.categoria=Categoria
 comun.fecha= Fecha
 comun.fecha.now= Fecha Actual
 comun.horaCita=Hora de cita m\u00e9dica
@@ -544,6 +544,8 @@ Examen.nombre1.lineaAyuda=Nombre del Examen de Laboratorio Cl\u00ednico
 Examen.Tipo=Tipo de Examen
 Examen.Tipo.lineaAyuda=Tipo de Examen de Laboratorio Cl\u00ednico
 Examen.ValorReferencial=Valor de Referencia
+Examen.ValorRefInf=Valor de Referencial Inferior
+Examen.ValorRefSup=Valor de Referencial Superior
 Examen.ValorReferencial.lineaAyuda=Valor de Referencia del Examen 
 Examen.Pedidos=PEDIDOS DE EXAMENES DEL LABORATORIO
 Examen.pedidos=Pedidos de Examenes
