--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -6,7 +6,7 @@
 # \u00e1 = \u00e1
 
 app.name=Software de Gestion de Servicios de Salud
-app.logo=Clinical software
+app.logo=Software Clinico
 
 #Account messages
 account=Cuenta
@@ -222,7 +222,7 @@ comun.area.lineaAyuda=A que \u00e1rea pertenece su carrera
 comun.carrera=Carrera
 comun.carrera.lineaAyuda=En que carrera estudia
 comun.consulta= Consulta
-comun.categoria="Categoria"
+comun.categoria=Categoria
 comun.fecha= Fecha
 comun.fecha.now= Fecha Actual
 comun.horaCita=Hora de cita m\u00e9dica
@@ -442,7 +442,7 @@ receta.instriccion.tiempoToma=Indique el Periodo entre Toma
 receta.instriccion.duracionTratamiento=Indique el Periodo del Tratamiento
 receta.Nombres=RECETAS M\u00c9DICAS
 receta.nombre=Receta
-receta.numero=Nro. de Receta
+receta.numero=N\u00b0 Receta
 receta.Responsable=Responsable
 receta.responsableEmision=Responsable Emisi\u00f3n
 receta.responsableEntrega=Responsable Entrega
@@ -540,6 +540,8 @@ Examen.Tipo=Tipo de Examen
 Examen.Tipo.lineaAyuda=Tipo de Examen de Laboratorio Cl\u00ednico
 Examen.ValorReferencial=Valor de Referencia
 Examen.ValorReferencial.lineaAyuda=Valor de Referencia del Examen 
+Examen.ValorRefInf=Valor de Referencial Inferior
+Examen.ValorRefSup=Valor de Referencial Superior
 Examen.Pedidos=PEDIDOS DE EXAMENES DEL LABORATORIO
 Examen.pedidos=Pedidos de Examenes
 Examen.resultado=Resultados de Examen
