--- a/src/main/resources/edu/sgssalud/messages_es.properties
+++ b/src/main/resources/edu/sgssalud/messages_es.properties
@@ -584,3 +584,4 @@ turno.motivo=Motivo
 
 EnfermedadesEstandarEcuador=A01,A02,A03,A04,A05,A06,A07
 validation.lengthIdentificationNumberLegalEntity=N\u00famero de identificaci\u00f3n invalido
+common.delete.confirm1=Confirme para regresar
